--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="button_continue">Continue</string>
     <string name="button_toast_not_supported">Not supported yet!</string>
     <string name="take_picture_text">Take</string>
+    <string name="not_enough_pics">Please capture all required pictures!</string>
+    <string name="not_making_a_selection">Please make a selection!</string>
 
     <!-- Activity specific strings -->
     <string name="welcome_title">@string/app_name</string>
@@ -32,7 +34,6 @@
     <string name="take_picture_ii_license_plate_your_car">License plate - Your car</string>
     <string name="take_picture_ii_license_plate_opponents_car">License plate - Opponent\'s car</string>
     <string name="take_picture_ii_additional">Additional photo (Optional)</string>
-    <string name="not_enough_pics">Please capture all required pictures!</string>
 
     <string name="take_picture_iii_details">Please move the car to the safe area in order to avoid traffic jam</string>
 
