--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,7 @@
     <string name="make_agreement_button_agree">Agree</string>
     <string name="make_agreement_button_disagree">Disagree</string>
 
+    <string name="agreement_screenshot_suggestion">We suggest you to take screenshots of this page for future reference. For Android device, hold "Home" and "Power" buttons at the same time.</string>
     <string name="agreement_agreement_title">Agreement</string>
     <string name="agreement_agreement_time">Time</string>
     <string name="agreement_agreement_time_result">Apr. 4, 2017 17:20:00</string>
